# telegram-bot-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tonconnect-manifest.json.example
.github/workflows/: ci.yml
.kiro/specs/telegram-bot-template/: .config.kiro  design.md  requirements.md  tasks.md
app/: __main__.py  bot.py  config.py  container.py  web.py
app/admin/: authorization.py  commands_setup.py  filters.py  handlers.py  user_manager.py
app/core/: healthcheck.py
app/core/cache/: redis_client.py
app/core/db/: base.py  engine.py  models.py
app/core/handlers/: cancel.py  profile.py  start.py
app/core/middlewares/: registration.py  status_gate.py
app/core/repositories/: audit.py  broadcasts.py  payments.py  users.py
app/core/services/: audit.py  fsm.py  registration.py  retry.py
app/core/utils/: clock.py  logging.py
app/features/antispam/: __init__.py  captcha.py  middleware.py  ratelimit.py
app/features/broadcasts/: __init__.py  producer.py  services.py  worker.py
app/features/i18n/: __init__.py  loader.py  middleware.py
app/features/payments/: __init__.py  services.py  stars.py  ton.py  ton_api.py
app/features/referrals/: __init__.py  crediting.py  handlers.py
app/features/stats/: __init__.py  handlers.py  service.py  services.py
app/features/subscriptions/: __init__.py  checker.py  handlers.py  middleware.py
app/locales/: en.yml  ru.yml
app/scheduler/: jobs.py  tasks.py
app/ton/: connector.py  handlers.py  manifest.py  session_store.py  verifier.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_referral_credited_at.py
tests/contract/: __init__.py  test_ton_connect.py
tests/unit/: test_subscriptions_checker.py  test_subscriptions_middleware.py  test_ton_verifier.py
