[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-template"
version = "0.1.0"
description = "Universal template Telegram bot with modular architecture (admin panel, TON Connect, referrals, broadcasts, payments, etc.)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "telegram-bot-template" }]

dependencies = [
    "aiogram==3.28.2",
    "aiohttp==3.13.5",
    "sqlalchemy[asyncio]==2.0.49",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "redis==7.4.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "structlog==25.5.0",
    "apscheduler==3.10.4",
    "pytonconnect==0.3.2",
    "pytoniq-core==0.1.39",
    "pynacl==1.5.0",
    "pyyaml==6.0.3",
    "python-dateutil==2.9.0",
    "qrcode[pil]==7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "testcontainers[postgres,redis]==4.14.2",
    "ruff==0.15.12",
    "mypy==2.1.0",
    "types-PyYAML==6.0.12.20260510",
    "types-python-dateutil==2.9.0.20260508",
]

[project.scripts]
tgbot = "app.__main__:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
# Ignore rationale (re-evaluated at each Stage 7 checkpoint):
#   E501           — line length handled by formatter preferences
#   RUF001..003    — the bot ships a Russian locale; literal Cyrillic
#                    characters in user-facing strings are intentional
#   SIM102         — nested ``if`` branches in Settings validators /
#                    TonCenter parsing remain deliberate for readability
#   SIM105         — ``try/except/pass`` in shutdown and audit fallbacks
#                    intentionally swallows exceptions; rewriting with
#                    ``contextlib.suppress`` would add no signal
#   UP007          — ``Optional[X]`` retained in a TON Connect surface
#                    that exposes its type hints through ``typing``
#   UP042          — SQLAlchemy ORM enums inherit from ``(str, Enum)`` to
#                    keep dialect-specific behaviour stable
#   RUF022         — ``__all__`` ordering is grouped by feature, not
#                    alphabetical, in the feature bundles
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
    "SIM102",
    "SIM105",
    "UP007",
    "UP042",
    "RUF022",
    # ASYNC109 — functions that expose a ``timeout`` parameter as part of
    # their public API (e.g. ``redis_ping``, ``db_ping``, ``BroadcastWorker.stop``)
    # are a deliberate pattern used by the health-check and shutdown paths.
    "ASYNC109",
    # ASYNC240 — ``Settings``/container bootstrap runs once during startup
    # and may touch ``pathlib.Path`` synchronously without blocking real traffic.
    "ASYNC240",
    # ASYNC110 — the TON connector polls ``tc.connected`` while waiting for
    # the user to approve the wallet; replacing this with ``asyncio.Event``
    # is tracked as Stage 7 tech debt (see design.md § TON Connect).
    "ASYNC110",
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E", "F", "W", "I"]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests without external services",
    "integration: tests requiring testcontainers (Postgres/Redis)",
    "functional: end-to-end handler scenarios on mocked Bot",
    "contract: tests against mocked external APIs (TON Connect / TonCenter)",
]
